--- a/notebooks/attention-visualizations.ipynb
+++ b/notebooks/attention-visualizations.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -49,9 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "config = util.get_config('../config/config-emb256.json')\n",
@@ -75,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model_interp = GTransformer(emb=embedding_size, heads=num_heads, depth=depth, seq_length=sample_length, num_tokens=num_tokens, attention_type=None)\n",
@@ -91,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -116,9 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -209,9 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def load_model(model, opt, model_location):\n",
@@ -248,9 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_data_from_location(idx, start_location, incr=1): #start_location is sample position and not timestamp\n",
@@ -274,9 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -294,9 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -338,9 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_attention_matrix(key_name, query_name): #Code extracted from transformer/modules.py \n",
@@ -363,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style='background-color:pink;width:100%'><u>Attention Visualisation</u></span>"
+    "# Attention Visualisation"
    ]
   },
   {
@@ -383,9 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -538,9 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -693,9 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -835,9 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -852,7 +825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style='background-color:pink;width:100%'><u>Saliency for Transformer explainability</u></span>"
+    "# Saliency for Transformer explainability"
    ]
   },
   {
@@ -872,9 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1020,9 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1219,9 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1294,9 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1400,7 +1365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
