--- a/notebooks/attention-visualizations.ipynb
+++ b/notebooks/attention-visualizations.ipynb
@@ -843,6 +843,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reed "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 121,
    "metadata": {},
@@ -961,32 +968,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Random Seed"
+   ]
   },
   {
    "cell_type": "code",
